openvidu-server: remove deprecations and warnings